# beef

./: CMakeLists.txt  README.md
beef/: beef-config.h.in  beef.cpp
beef/events/: events.cpp  events.hpp
